--- a/app/src/main/res/layout/item_local_spokesman.xml
+++ b/app/src/main/res/layout/item_local_spokesman.xml
@@ -37,6 +37,7 @@
         android:layout_marginTop="@dimen/dp_10"/>
 
     <TextView
+        android:id="@+id/item_local_spokesman_tv_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1.2km"
