--- a/app/src/main/res/layout/activity_cell_phone_login.xml
+++ b/app/src/main/res/layout/activity_cell_phone_login.xml
@@ -25,12 +25,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <com.zthx.npj.view.MyCircleView
+            android:id="@+id/at_cellphone_login_iv_head_pic"
             android:layout_width="@dimen/dp_70"
             android:layout_height="@dimen/dp_70"
             android:src="@mipmap/ic_launcher"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/dp_50"/>
         <TextView
+            android:id="@+id/at_cellphone_login_tv_third_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="滴滴答答"
