--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -65,28 +65,34 @@
                    android:layout_alignLeft="@id/at_store_detail_name"
                    android:layout_below="@id/at_store_detail_name">
                    <ImageView
-                       android:layout_width="@dimen/dp_14"
-                       android:layout_height="@dimen/dp_14"
-                       android:src="@drawable/item_location_store_star"/>
-                   <ImageView
-                       android:layout_width="@dimen/dp_14"
-                       android:layout_height="@dimen/dp_14"
-                       android:src="@drawable/item_location_store_star"/>
-                   <ImageView
-                       android:layout_width="@dimen/dp_14"
-                       android:layout_height="@dimen/dp_14"
-                       android:src="@drawable/item_location_store_star"/>
-                   <ImageView
+                       android:id="@+id/at_store_detail_iv_star1"
                        android:layout_width="@dimen/dp_14"
                        android:layout_height="@dimen/dp_14"
                        android:src="@drawable/item_location_store_unstar"/>
                    <ImageView
+                       android:id="@+id/at_store_detail_iv_star2"
+                       android:layout_width="@dimen/dp_14"
+                       android:layout_height="@dimen/dp_14"
+                       android:src="@drawable/item_location_store_unstar"/>
+                   <ImageView
+                       android:id="@+id/at_store_detail_iv_star3"
+                       android:layout_width="@dimen/dp_14"
+                       android:layout_height="@dimen/dp_14"
+                       android:src="@drawable/item_location_store_unstar"/>
+                   <ImageView
+                       android:id="@+id/at_store_detail_iv_star4"
+                       android:layout_width="@dimen/dp_14"
+                       android:layout_height="@dimen/dp_14"
+                       android:src="@drawable/item_location_store_unstar"/>
+                   <ImageView
+                       android:id="@+id/at_store_detail_iv_star5"
                        android:layout_width="@dimen/dp_14"
                        android:layout_height="@dimen/dp_14"
                        android:src="@drawable/item_location_store_unstar"/>
                </LinearLayout>
 
                <TextView
+                   android:id="@+id/at_store_detail_tv_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/at_store_detail_name"
@@ -109,6 +115,7 @@
                        android:src="@drawable/store_time"/>
 
                    <TextView
+                       android:id="@+id/at_store_detail_tv_open_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00-02:00营业"
@@ -116,6 +123,7 @@
                        android:textColor="@color/text6"
                        android:textSize="@dimen/sp_12"/>
                    <TextView
+                       android:id="@+id/at_store_detail_tv_consumption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="人均消费￥125"
@@ -166,6 +174,7 @@
                    android:textSize="@dimen/sp_13"
                    android:textColor="@color/text3"/>
                <TextView
+                   android:id="@+id/at_store_detail_tv_address2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/at_store_detail_tv_address"
@@ -217,6 +226,7 @@
                        android:layout_height="@dimen/dp_17"
                        android:src="@drawable/item_location_store_dikou"/>
                    <TextView
+                       android:id="@+id/at_store_detail_tv_offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
@@ -238,6 +248,7 @@
                        android:layout_height="@dimen/dp_17"
                        android:src="@drawable/item_location_store_dikou2"/>
                    <TextView
+                       android:id="@+id/at_store_detail_tv_relief"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_5"
