--- a/app/src/main/res/layout/item_location_store.xml
+++ b/app/src/main/res/layout/item_location_store.xml
@@ -31,22 +31,27 @@
         android:layout_alignLeft="@id/item_location_store_tv_title"
         android:layout_below="@id/item_location_store_tv_title">
         <ImageView
-            android:layout_width="@dimen/dp_14"
-            android:layout_height="@dimen/dp_14"
-            android:src="@drawable/item_location_store_star"/>
-        <ImageView
-            android:layout_width="@dimen/dp_14"
-            android:layout_height="@dimen/dp_14"
-            android:src="@drawable/item_location_store_star"/>
-        <ImageView
-            android:layout_width="@dimen/dp_14"
-            android:layout_height="@dimen/dp_14"
-            android:src="@drawable/item_location_store_star"/>
-        <ImageView
+            android:id="@+id/item_location_store_iv_star1"
             android:layout_width="@dimen/dp_14"
             android:layout_height="@dimen/dp_14"
             android:src="@drawable/item_location_store_unstar"/>
         <ImageView
+            android:id="@+id/item_location_store_iv_star2"
+            android:layout_width="@dimen/dp_14"
+            android:layout_height="@dimen/dp_14"
+            android:src="@drawable/item_location_store_unstar"/>
+        <ImageView
+            android:id="@+id/item_location_store_iv_star3"
+            android:layout_width="@dimen/dp_14"
+            android:layout_height="@dimen/dp_14"
+            android:src="@drawable/item_location_store_unstar"/>
+        <ImageView
+            android:id="@+id/item_location_store_iv_star4"
+            android:layout_width="@dimen/dp_14"
+            android:layout_height="@dimen/dp_14"
+            android:src="@drawable/item_location_store_unstar"/>
+        <ImageView
+            android:id="@+id/item_location_store_iv_star5"
             android:layout_width="@dimen/dp_14"
             android:layout_height="@dimen/dp_14"
             android:src="@drawable/item_location_store_unstar"/>
@@ -75,6 +80,7 @@
             android:layout_height="@dimen/dp_17"
             android:src="@drawable/item_location_store_dikou"/>
         <TextView
+            android:id="@+id/item_location_store_tv_offer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_5"
@@ -96,6 +102,7 @@
             android:layout_height="@dimen/dp_17"
             android:src="@drawable/item_location_store_dikou2"/>
         <TextView
+            android:id="@+id/item_location_store_tv_relief"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_5"
@@ -113,12 +120,14 @@
         android:layout_marginRight="@dimen/dp_12"
         android:gravity="center_horizontal">
         <TextView
+            android:id="@+id/item_location_store_tv_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="200m"
             android:textSize="@dimen/sp_12"
             android:textColor="@color/text6"/>
         <TextView
+            android:id="@+id/item_location_store_tv_popularity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="当前人气63"
