--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -54,6 +54,7 @@
                     android:layout_marginLeft="@dimen/dp_12"/>
 
                 <TextView
+                    android:id="@+id/at_confirm_order_tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -77,6 +78,7 @@
                     android:layout_marginLeft="@dimen/dp_12"/>
 
                 <TextView
+                    android:id="@+id/at_confirm_order_tv_store_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -126,6 +128,7 @@
                     android:text="规格：速度 500/g"/>
 
                 <TextView
+                    android:id="@+id/at_confirm_order_tv_goods_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignLeft="@id/at_confirm_order_tv_size"
@@ -136,6 +139,7 @@
                     android:text="￥66"/>
 
                 <TextView
+                    android:id="@+id/at_confirm_order_tv_goods_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -239,6 +243,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/dp_12"/>
                 <TextView
+                    android:id="@+id/at_confirm_order_tv_to_store"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
