--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -116,6 +116,8 @@
             </RelativeLayout>
 
             <LinearLayout
+              android:id="@+id/at_goods_detail_ll_goods"
+              android:visibility="gone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
@@ -190,11 +192,13 @@
             </LinearLayout>
 
             <LinearLayout
-                android:visibility="gone"
+                android:id="@+id/at_goods_detail_ll_presell"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/at_goods_detail_tv_pre_sell_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_9"
@@ -203,6 +207,7 @@
                     android:textColor="@color/text3"
                     android:layout_marginLeft="@dimen/dp_12"/>
                 <TextView
+                    android:id="@+id/at_goods_detail_tv_pre_sell_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="￥120"
@@ -245,6 +250,7 @@
                         android:orientation="vertical"
                         android:gravity="center">
                         <TextView
+                            android:id="@+id/at_goods_detail_tv_pre_sell_yuding"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="80"
@@ -275,6 +281,7 @@
                             android:textColor="@color/text3"
                             android:textSize="@dimen/sp_15"/>
                         <TextView
+                            android:id="@+id/at_goods_detail_tv_pre_sell_yushou"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="预售金额"
@@ -293,6 +300,7 @@
                         android:orientation="vertical"
                         android:gravity="center">
                         <TextView
+                            android:id="@+id/at_goods_detail_tv_pre_sell_dacheng"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="80"
@@ -500,6 +508,7 @@
                     android:textSize="@dimen/sp_16" />
 
                 <Button
+                    android:id="@+id/at_goods_detail_btn_pre_sell_know"
                     android:visibility="gone"
                     android:layout_width="@dimen/dp_100"
                     android:layout_height="match_parent"
