--- a/app/src/main/res/layout/activity_pre_sell.xml
+++ b/app/src/main/res/layout/activity_pre_sell.xml
@@ -33,8 +33,50 @@
         android:layout_height="@dimen/dp_141"
         android:src="@mipmap/ic_launcher"/>
 
+    <LinearLayout
+        android:layout_width="@dimen/dp_175"
+        android:layout_height="@dimen/dp_30"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/dp_11"
+        android:background="@drawable/stroke_app_theme"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/at_pre_sell_tv_ing"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="@dimen/dp_3"
+            android:textColor="@android:color/white"
+            android:text="预售中"
+            android:textSize="@dimen/sp_16"
+            android:background="@color/app_theme"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/at_pre_sell_tv_ed"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="@dimen/dp_3"
+            android:textColor="@color/text3"
+            android:text="已结束"
+            android:textSize="@dimen/sp_16"
+            android:background="@android:color/white"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/at_pre_sell_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginLeft="@dimen/dp_6"
+        android:layout_marginRight="@dimen/dp_6">
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/at_pre_sell_rv2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_8"
