提交限时秒杀

--- a/app/src/main/res/layout/item_sec_kill_adpter.xml
+++ b/app/src/main/res/layout/item_sec_kill_adpter.xml
@@ -87,5 +87,9 @@
         android:textColor="@color/app_theme"/>
 
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:layout_alignParentBottom="true"
+        android:background="@color/background"></View>
 </RelativeLayout>
