--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -21,6 +21,7 @@
                 android:layout_height="@dimen/dp_283">
 
                 <com.youth.banner.Banner
+                    android:id="@+id/at_goods_detail_banner"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"></com.youth.banner.Banner>
                 
@@ -30,7 +31,7 @@
                     android:layout_height="@dimen/dp_40"
                     android:layout_alignParentBottom="true"
                     android:background="@color/app_theme"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <ImageView
                         android:id="@+id/iv_miaosha_pic"
@@ -84,19 +85,21 @@
 
                 </RelativeLayout>
                 <LinearLayout
+                    android:id="@+id/at_goods_detail_rl_sec_kill_done"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_40"
                     android:background="@color/black"
                     android:alpha="0.45"
-                    android:visibility="gone">
+                    android:layout_alignParentBottom="true"
+                    android:visibility="gone"
+                    android:gravity="center">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/sp_16"
                         android:textColor="@android:color/white"
-                        android:text="本场秒杀活动已结束"
-                        android:gravity="center_vertical"/>
+                        android:text="本场秒杀活动已结束"/>
                 </LinearLayout>
 
                 <ImageView
@@ -117,7 +120,6 @@
 
             <LinearLayout
               android:id="@+id/at_goods_detail_ll_goods"
-              android:visibility="gone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
@@ -193,7 +195,7 @@
 
             <LinearLayout
                 android:id="@+id/at_goods_detail_ll_presell"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
