提交礼包店接口

--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -322,6 +322,7 @@
                     android:layout_marginRight="@dimen/dp_6"/>
             </RelativeLayout>
             <RelativeLayout
+                android:id="@+id/at_confirm_order_rl_hongbao"
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40">
