--- a/app/src/main/res/layout/activity_gift.xml
+++ b/app/src/main/res/layout/activity_gift.xml
@@ -14,12 +14,14 @@
         android:orientation="vertical"
         android:layout_below="@id/title">
         <com.youth.banner.Banner
+            android:id="@+id/at_gift_detail_banner"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_170"
             android:layout_marginRight="@dimen/dp_12"
             android:layout_marginLeft="@dimen/dp_12"></com.youth.banner.Banner>
         
         <TextView
+            android:id="@+id/at_gift_detail_tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥255"
@@ -29,6 +31,7 @@
             android:layout_marginTop="@dimen/dp_10"/>
 
         <TextView
+            android:id="@+id/at_gift_detail_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="PR梵睿品牌护肤诠释者"
@@ -37,6 +40,7 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:layout_marginTop="@dimen/dp_5"/>
         <TextView
+            android:id="@+id/at_gift_detail_tv_des"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="购买任意产品升级代言人，获得超值礼包，享受代言人的众多权益"
@@ -56,6 +60,7 @@
             android:orientation="horizontal"
             android:gravity="center">
             <TextView
+                android:id="@+id/at_gift_detail_tv_detail"
                 android:layout_width="@dimen/dp_100"
                 android:layout_height="@dimen/dp_38"
                 android:background="@color/app_theme"
@@ -64,6 +69,7 @@
                 android:textColor="@android:color/white"
                 android:gravity="center"/>
             <TextView
+                android:id="@+id/at_gift_detail_tv_needknow"
                 android:layout_width="@dimen/dp_100"
                 android:layout_height="@dimen/dp_38"
                 android:background="@android:color/white"
@@ -80,6 +86,7 @@
     </LinearLayout>
     
     <Button
+        android:id="@+id/at_gift_detail_btn_buy"
         android:layout_width="@dimen/dp_245"
         android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
