--- a/app/src/main/res/layout/item_buy_gift.xml
+++ b/app/src/main/res/layout/item_buy_gift.xml
@@ -8,11 +8,14 @@
     android:layout_marginLeft="@dimen/dp_12">
     
     <ImageView
+        android:id="@+id/item_buy_gift_pic"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_175"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="fitXY"/>
 
     <TextView
+        android:id="@+id/item_buy_gift_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="手工蛋黄酥纯手工制作新加坡美作蛋糕"
@@ -21,6 +24,7 @@
         android:layout_marginTop="@dimen/dp_10"/>
 
     <TextView
+        android:id="@+id/item_buy_gift_tv_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="购买礼包升级为代言人"
@@ -32,6 +36,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/item_buy_gift_tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥1299"
