--- a/app/src/main/res/layout/activity_enterprise_certification2.xml
+++ b/app/src/main/res/layout/activity_enterprise_certification2.xml
@@ -38,6 +38,7 @@
                    android:background="@color/background"/>
 
                <EditText
+                   android:id="@+id/at_enterprise_certification2_et_name"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_height="match_parent"
@@ -68,6 +69,7 @@
                    android:background="@color/background"/>
 
                <EditText
+                   android:id="@+id/at_enterprise_certification2_et_des"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_height="match_parent"
@@ -102,6 +104,7 @@
                    android:layout_height="match_parent"
                    android:layout_weight="3.5">
                    <EditText
+                       android:id="@+id/at_enterprise_certification2_et_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
@@ -137,6 +140,7 @@
                android:layout_marginTop="@dimen/dp_12"/>
 
            <LinearLayout
+               android:id="@+id/at_enterprise_certification2_ll_company_pic"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_130"
                android:orientation="vertical"
@@ -160,6 +164,7 @@
            </LinearLayout>
 
            <LinearLayout
+               android:id="@+id/at_enterprise_certification2_ll_shouquan"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_130"
                android:orientation="vertical"
@@ -207,6 +212,7 @@
                    android:layout_height="match_parent"
                    android:layout_weight="3.5">
                    <TextView
+                       android:id="@+id/at_enterprise_certification2_tv_personname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
@@ -217,6 +223,7 @@
                        android:paddingLeft="@dimen/dp_15"/>
 
                    <ImageView
+                       android:id="@+id/at_enterprise_certification2_tv_phone"
                        android:layout_width="@dimen/dp_13"
                        android:layout_height="@dimen/dp_13"
                        android:layout_centerVertical="true"
