--- a/app/src/main/res/layout/activity_trusted_store.xml
+++ b/app/src/main/res/layout/activity_trusted_store.xml
@@ -9,156 +9,197 @@
     <include
         layout="@layout/title"></include>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/title">
-        <ImageView
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_140"
-            android:src="@drawable/trust_trust"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="@dimen/dp_13">
-
-            <TextView
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_below="@id/title">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_140"
+                android:src="@drawable/trust_trust"/>
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="认证后您将获得以下权益"
                 android:gravity="center_horizontal"
-                android:textColor="@color/text6"
-                android:textSize="@dimen/sp_14"/>
-            <View
-                android:layout_width="@dimen/dp_271"
-                android:layout_centerInParent="true"
-                android:layout_height="@dimen/dp_1"
-                android:background="@drawable/trust_text_bg"></View>
-        </RelativeLayout>
+                android:layout_marginTop="@dimen/dp_13">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/dp_30">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="@dimen/dp_40"
-                    android:layout_height="@dimen/dp_40"
-                    android:src="@drawable/baozhang"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="平台保障"
-                    android:textSize="@dimen/sp_12"
-                    android:textColor="@color/text3"
-                    android:layout_marginTop="@dimen/dp_5"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="@dimen/dp_40"
-                    android:layout_height="@dimen/dp_40"
-                    android:src="@drawable/liuliang"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="流量扶持"
-                    android:textSize="@dimen/sp_12"
-                    android:textColor="@color/text3"
-                    android:layout_marginTop="@dimen/dp_5"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="@dimen/dp_40"
-                    android:layout_height="@dimen/dp_40"
-                    android:src="@drawable/zizhirenzheng"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="特殊标识"
-                    android:textSize="@dimen/sp_12"
-                    android:textColor="@color/text3"
-                    android:layout_marginTop="@dimen/dp_5"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="@dimen/dp_40"
-                    android:layout_height="@dimen/dp_40"
-                    android:src="@drawable/zuanshi"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="活动优先"
-                    android:textSize="@dimen/sp_12"
-                    android:textColor="@color/text3"
-                    android:layout_marginTop="@dimen/dp_5"/>
-            </LinearLayout>
-        </LinearLayout>
+                    android:text="认证后您将获得以下权益"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/text6"
+                    android:textSize="@dimen/sp_14"/>
+                <View
+                    android:layout_width="@dimen/dp_271"
+                    android:layout_centerInParent="true"
+                    android:layout_height="@dimen/dp_1"
+                    android:background="@drawable/trust_text_bg"></View>
+            </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_10"
-            android:background="@color/background"
-            android:layout_marginTop="@dimen/dp_20"></View>
-        
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="@dimen/dp_12"
-                android:gravity="center_vertical">
-                <View
-                    android:layout_width="@dimen/dp_4"
-                    android:layout_height="@dimen/sp_15"
-                    android:background="@color/app_theme"
-                    android:layout_marginLeft="@dimen/dp_12"></View>
+                android:layout_marginTop="@dimen/dp_30">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="@dimen/dp_40"
+                        android:layout_height="@dimen/dp_40"
+                        android:src="@drawable/baozhang"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="平台保障"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/text3"
+                        android:layout_marginTop="@dimen/dp_5"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="@dimen/dp_40"
+                        android:layout_height="@dimen/dp_40"
+                        android:src="@drawable/liuliang"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="流量扶持"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/text3"
+                        android:layout_marginTop="@dimen/dp_5"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="@dimen/dp_40"
+                        android:layout_height="@dimen/dp_40"
+                        android:src="@drawable/zizhirenzheng"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="特殊标识"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/text3"
+                        android:layout_marginTop="@dimen/dp_5"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="@dimen/dp_40"
+                        android:layout_height="@dimen/dp_40"
+                        android:src="@drawable/zuanshi"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="活动优先"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/text3"
+                        android:layout_marginTop="@dimen/dp_5"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_10"
+                android:background="@color/background"
+                android:layout_marginTop="@dimen/dp_20"></View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:gravity="center_vertical">
+                    <View
+                        android:layout_width="@dimen/dp_4"
+                        android:layout_height="@dimen/sp_15"
+                        android:background="@color/app_theme"
+                        android:layout_marginLeft="@dimen/dp_12"></View>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="认证须知"
+                        android:textColor="@color/text3"
+                        android:layout_marginLeft="@dimen/dp_10"/>
+                </LinearLayout>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="认证须知"
-                    android:textColor="@color/text3"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1.完成实人认证或企业认证
+                    android:text="1.完成实人认证或企业认证
 2.缴纳保证金2000起，能力越大，可保障越多
 3.好评率>80%，投诉少于3成，接受商品抽查"
-                android:layout_marginLeft="@dimen/dp_12"
-                android:layout_marginTop="@dimen/dp_10"
-                android:textColor="@color/text3"
-                android:textSize="@dimen/sp_14"/>
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_14"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/at_trust_store_ll_baozhengjin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/dp_15">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_10"
+                    android:background="@color/background"></View>
+                
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_40"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="@dimen/dp_28"
+                        android:layout_height="@dimen/dp_28"
+                        android:src="@drawable/baozhang"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/dp_12"/>
+
+                    <TextView
+                        android:id="@+id/at_trust_store_tv_baozhengjin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="您的当前保证金为3000元"
+                        android:textColor="#E4633B"
+                        android:textSize="@dimen/sp_16"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/dp_20"/>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_10"
+                    android:background="@color/background"></View>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/at_trust_bottom"
