--- a/app/src/main/res/layout/activity_trusted_store2.xml
+++ b/app/src/main/res/layout/activity_trusted_store2.xml
@@ -20,6 +20,7 @@
         android:src="@drawable/trust_trust"/>
 
         <RelativeLayout
+            android:id="@+id/at_trust_store2_rl_2000"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:background="@drawable/white_conner_5"
@@ -27,6 +28,7 @@
             android:layout_marginTop="@dimen/dp_20"
             android:layout_marginLeft="@dimen/dp_12">
             <TextView
+                android:id="@+id/at_trust_store2_tv_2000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="¥2000"
@@ -37,6 +39,7 @@
                 android:layout_marginRight="@dimen/dp_15"/>
 
             <TextView
+                android:id="@+id/at_trust_store2_tv2_2000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="保证金"
@@ -47,6 +50,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/at_trust_store2_rl_3000"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:background="@drawable/white_conner_5"
@@ -54,6 +58,7 @@
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginLeft="@dimen/dp_12">
             <TextView
+                android:id="@+id/at_trust_store2_tv_3000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="¥3000"
@@ -64,6 +69,7 @@
                 android:layout_marginRight="@dimen/dp_15"/>
 
             <TextView
+                android:id="@+id/at_trust_store2_tv2_3000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="保证金"
@@ -74,6 +80,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/at_trust_store2_rl_4000"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:background="@drawable/white_conner_5"
@@ -81,6 +88,7 @@
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginLeft="@dimen/dp_12">
             <TextView
+                android:id="@+id/at_trust_store2_tv_4000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="¥4000"
@@ -91,6 +99,7 @@
                 android:layout_marginRight="@dimen/dp_15"/>
 
             <TextView
+                android:id="@+id/at_trust_store2_tv2_4000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="保证金"
@@ -114,6 +123,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <RadioButton
+                android:id="@+id/at_trust_store2_rb_read"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_10"
@@ -131,6 +141,7 @@
     </LinearLayout>
     
     <Button
+        android:id="@+id/at_trust_store2_btn_join"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
         android:layout_marginLeft="@dimen/dp_38"
