--- a/app/src/main/res/layout/activity_agriculture_video_main.xml
+++ b/app/src/main/res/layout/activity_agriculture_video_main.xml
@@ -14,15 +14,10 @@
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_289">
-           <ImageView
+           <com.zthx.npj.media.IjkVideoView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
-               android:src="@mipmap/ic_launcher"/>
-           <ImageView
-               android:layout_width="@dimen/dp_45"
-               android:layout_height="@dimen/dp_45"
-               android:src="@drawable/item_play"
-               android:layout_centerInParent="true"/>
+               android:id="@+id/at_ak_video_player"/>
        </RelativeLayout>
 
        <android.support.design.widget.TabLayout
@@ -51,6 +46,7 @@
         android:layout_alignParentBottom="true"
         android:background="@android:color/white">
         <EditText
+            android:id="@+id/at_ak_video_et_comment"
             android:layout_width="@dimen/dp_250"
             android:layout_height="@dimen/dp_30"
             android:hint="写评论......"
