--- a/app/src/main/res/layout/activity_systemolution.xml
+++ b/app/src/main/res/layout/activity_systemolution.xml
@@ -13,12 +13,10 @@
         <include
             layout="@layout/title"></include>
 
-        <ImageView
+        <com.zthx.npj.media.IjkVideoView
+            android:id="@+id/at_system_solution_player"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_225"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_height="@dimen/dp_225"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/at_system_solution_tb"
