--- a/app/src/main/res/layout/item_ak_adapter.xml
+++ b/app/src/main/res/layout/item_ak_adapter.xml
@@ -12,6 +12,7 @@
         android:layout_height="@dimen/dp_100"
         android:layout_gravity="center_vertical">
         <ImageView
+            android:id="@+id/item_ak_iv_img"
             android:layout_width="@dimen/dp_100"
             android:layout_height="@dimen/dp_100"
             android:src="@mipmap/ic_launcher"/>
@@ -29,6 +30,7 @@
         android:layout_marginLeft="@dimen/dp_11">
 
         <TextView
+            android:id="@+id/item_ak_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="河南省农科大学教授农作物专题课程如何实现增产增收的秘诀"
@@ -38,6 +40,7 @@
             android:maxLines="2"/>
 
         <TextView
+            android:id="@+id/item_ak_tv_update_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2天前更新"
@@ -50,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_13">
             <TextView
+                android:id="@+id/item_ak_tv_sale_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="购买次数 321"
@@ -58,6 +62,7 @@
                 />
 
             <TextView
+                android:id="@+id/item_ak_tv_look_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
