--- a/app/src/main/res/layout/item_select_video.xml
+++ b/app/src/main/res/layout/item_select_video.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/item_play"/>
 
     <TextView
+        android:id="@+id/item_select_video_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1.0-导论导论导论导论导论导论导论导论导论导论"
