--- a/app/src/main/res/layout/fragment_discover_supply.xml
+++ b/app/src/main/res/layout/fragment_discover_supply.xml
@@ -134,6 +134,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/fg_discover_supply_tv_supply"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -144,6 +145,7 @@
             android:background="@color/app_theme"
             android:gravity="center"/>
         <TextView
+            android:id="@+id/fg_discover_supply_tv_need"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -154,6 +156,7 @@
             android:background="@android:color/white"
             android:gravity="center"/>
         <TextView
+            android:id="@+id/fg_discover_supply_tv_company"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -173,62 +176,119 @@
         android:background="@mipmap/ic_launcher"/>
 
     <LinearLayout
+        android:id="@+id/fg_discover_supply_ll_supply"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="最新"
-            android:gravity="center"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text3"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="附近"
-            android:gravity="center"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text3"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="销量"
-            android:gravity="center"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text3"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="信用"
-            android:gravity="center"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text3"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="价格"
-            android:gravity="center"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text3"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <TextView
+                android:id="@+id/fg_discover_supply_tv_new"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="最新"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+            <TextView
+                android:id="@+id/fg_discover_supply_tv_location"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="附近"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+            <TextView
+                android:id="@+id/fg_discover_supply_tv_sell_num"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="销量"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+            <TextView
+                android:id="@+id/fg_discover_supply_tv_xinyong"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="信用"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+            <TextView
+                android:id="@+id/fg_discover_supply_tv_price"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="价格"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/background"></View>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fg_discover_supply_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+
     </LinearLayout>
-    <View
+    <LinearLayout
+        android:id="@+id/fg_discover_supply_ll_need"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:background="@color/background"></View>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fg_discover_supply_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <TextView
+                android:id="@+id/fg_discover_need_tv_new"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="最新"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+            <TextView
+                android:id="@+id/fg_discover_need_tv_location"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="附近"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text3"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/background"></View>
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fg_discover_need_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </android.support.v7.widget.RecyclerView>
+
+
+    </LinearLayout>
 
 </LinearLayout>
