--- a/app/src/main/res/layout/popupwindow_supply_producets.xml
+++ b/app/src/main/res/layout/popupwindow_supply_producets.xml
@@ -37,38 +37,24 @@
     <RelativeLayout
         android:id="@+id/pop_sup_pro_rl_content1"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40"
+        android:layout_height="@dimen/dp_100"
         android:layout_below="@id/pop_sup_pro_rl_title"
-        android:layout_marginTop="@dimen/dp_10">
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_10">
 
         <EditText
-            android:layout_width="@dimen/dp_80"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="请填写商品"
+            android:hint="请输入您要报价的产品及价格例：
+苹果：3元/斤
+香蕉：200元/件
+地瓜：1000元/吨"
             android:textSize="@dimen/sp_13"
             android:textColor="@color/text9"
             android:layout_marginLeft="@dimen/dp_11"
             android:background="@null"/>
 
-        <TextView
-            android:id="@+id/pop_sup_pro_tv_danwei"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="元/斤"
-            android:textColor="@color/text6"
-            android:textSize="@dimen/sp_15"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/dp_10"
-            android:layout_centerVertical="true"/>
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:hint="请填写价格"
-            android:layout_toLeftOf="@id/pop_sup_pro_tv_danwei"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text9"
-            android:background="@null"/>
 
         <View
             android:layout_width="match_parent"
@@ -78,29 +64,11 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/pop_sup_pro_rl_add"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40"
-        android:layout_below="@id/pop_sup_pro_rl_content1">
-        <ImageView
-            android:layout_width="@dimen/dp_20"
-            android:layout_height="@dimen/dp_20"
-            android:src="@drawable/pop_sup_pro_add"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_11"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:layout_alignParentBottom="true"
-            android:background="@color/background"></View>
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/pop_sup_pro_rl_add"
+        android:layout_below="@id/pop_sup_pro_rl_content1"
         android:layout_marginTop="@dimen/dp_50">
 
         <TextView
