--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -30,6 +30,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
             <EditText
+                android:id="@+id/ac_address_et_consignee"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="请输入收件人姓名"
@@ -48,6 +49,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
             <EditText
+                android:id="@+id/ac_address_et_mobile"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="请输入手机号"
@@ -66,6 +68,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
             <EditText
+                android:id="@+id/ac_address_et_address"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="省 市 区"
@@ -83,6 +86,7 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:orientation="horizontal">
             <EditText
+                android:id="@+id/ac_address_et_houseNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="请填写详细地址"
@@ -109,6 +113,7 @@
                 android:layout_centerVertical="true"/>
 
             <ImageView
+                android:id="@+id/ac_address_iv_isDefault"
                 android:layout_width="@dimen/dp_50"
                 android:layout_height="@dimen/dp_27"
                 android:layout_centerVertical="true"
@@ -123,6 +128,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/ac_address_btn_save"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
