--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,13 @@
         android:layout_alignParentTop="true"
         android:paddingBottom="48dp"></FrameLayout>
 
-    <FrameLayout
+    <!--<FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
-        android:clipChildren="false">
+        android:clipChildren="false">-->
 
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
             android:layout_gravity="bottom"
@@ -224,6 +224,84 @@
             </LinearLayout>
         </LinearLayout>
 
-    </FrameLayout>
+    </FrameLayout>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_80"
+        android:layout_alignParentBottom="true">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <RadioButton
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="@dimen/dp_40"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:textColor="@drawable/activity_main_select_text"
+                android:drawableTop="@drawable/activity_main_select_home"
+                android:id="@+id/ll_main_check_01"
+                android:text="首页"
+                android:checked="true"/>
+            <RadioButton
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="@dimen/dp_40"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:textColor="@drawable/activity_main_select_text"
+                android:drawableTop="@drawable/activity_main_select_discover"
+                android:id="@+id/ll_main_check_02"
+                android:text="发现" />
+            <LinearLayout
+                android:id="@+id/ll_main_check_03"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="@dimen/dp_80"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
+                <ImageView
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:src="@drawable/game"
+                    android:layout_marginTop="@dimen/dp_14"/>
+
+                <TextView
+                    android:id="@+id/tv_home_game"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="2dp"
+                    android:textSize="@dimen/sp_10"
+                    android:text="庄园" />
+            </LinearLayout>
+            <RadioButton
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="@dimen/dp_40"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:textColor="@drawable/activity_main_select_text"
+                android:drawableTop="@drawable/activity_main_select_shoppingcart"
+                android:id="@+id/ll_main_check_04"
+                android:text="购物车" />
+            <RadioButton
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="@dimen/dp_40"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:textColor="@drawable/activity_main_select_text"
+                android:drawableTop="@drawable/activity_main_select_mine"
+                android:id="@+id/ll_main_check_05"
+                android:text="我的" />
+        </RadioGroup>
+    </LinearLayout>
+    <!--</FrameLayout>-->
 </RelativeLayout>
