--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -6,7 +6,7 @@
     tools:context=".ui.fragment.MineFragment"
     android:orientation="vertical"
     android:clipChildren="false">
-
+    <include layout="@layout/title"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -30,6 +30,7 @@
                     android:src="@mipmap/ic_launcher"/>
 
                 <ImageView
+                    android:id="@+id/fg_mine_iv_levelimg"
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="@dimen/dp_23"
                     android:layout_below="@id/fg_mine_iv_head_pic"
@@ -118,6 +119,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/fg_mine_tv_collectionNum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/text3"
@@ -139,6 +141,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/fg_mine_tv_gourdCoin"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/text3"
@@ -160,6 +163,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/fg_mine_tv_couponNum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/text3"
